<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_principal_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meb1.manuel.congresoajef.MenuPrincipal"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/hab_view_intro"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_below="@+id/nombre_view_intro"
        android:layout_centerHorizontal="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/futbolBox"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintRight_toRightOf="@+id/oratoriaBox"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/nombre_view_intro"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp" />


    <TextView
        android:id="@+id/nombre_view_intro"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/futbolBox"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="@+id/hab_view_intro"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="62dp"
        app:layout_constraintLeft_toLeftOf="@+id/hab_view_intro"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp" />

    <CheckBox
        android:id="@+id/oratoriaBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hab_view_intro"
        android:text="@string/oratoria"
        android:layout_marginEnd="31dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/basquetBox"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="31dp" />

    <CheckBox
        android:id="@+id/dominoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oratoriaBox"
        android:layout_toLeftOf="@+id/declamacionBox"
        android:layout_toStartOf="@+id/declamacionBox"
        android:text="@string/domin"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/cantoBox"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/cantoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/basquetBox"
        android:layout_alignBottom="@+id/basquetBox"
        android:layout_toEndOf="@+id/basquetBox"
        android:layout_toRightOf="@+id/basquetBox"
        android:text="@string/canto"
        android:layout_marginEnd="3dp"
        app:layout_constraintRight_toLeftOf="@+id/premioBox"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/declamacionBox"
        android:layout_marginRight="3dp" />

    <CheckBox
        android:id="@+id/cuentoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/declamacionBox"
        android:layout_alignStart="@+id/declamacionBox"
        android:layout_below="@+id/declamacionBox"
        android:text="@string/cuento"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dominoBox"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/ajedrezView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/futbolBox"
        android:layout_toEndOf="@+id/declamacionBox"
        android:layout_toRightOf="@+id/declamacionBox"
        android:text="@string/ajedrez"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/hab_view_intro"
        app:layout_constraintBaseline_toBaselineOf="@+id/declamacionBox"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/hab_view_intro" />

    <CheckBox
        android:id="@+id/declamacionBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/oratoriaBox"
        android:layout_alignBottom="@+id/oratoriaBox"
        android:layout_toEndOf="@+id/oratoriaBox"
        android:layout_toRightOf="@+id/oratoriaBox"
        android:text="@string/declamaci_n"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/hab_view_intro"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cantoBox" />

    <CheckBox
        android:id="@+id/basquetBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dominoBox"
        android:layout_alignStart="@+id/dominoBox"
        android:layout_below="@+id/dominoBox"
        android:text="@string/basquetbol"
        android:layout_marginStart="4dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/premioBox"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cantoBox"
        android:layout_marginLeft="4dp" />

    <CheckBox
        android:id="@+id/premioBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basquetBox"
        android:layout_toEndOf="@+id/dominoBox"
        android:layout_toRightOf="@+id/dominoBox"
        android:text="@string/premio_nacional_ajef"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/cantoBox"
        tools:layout_constraintBaseline_creator="1" />

    <CheckBox
        android:id="@+id/futbolBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ajedrezView"
        android:layout_alignStart="@+id/ajedrezView"
        android:layout_below="@+id/declamacionBox"
        android:text="@string/futbol"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/menuButton"
        android:layout_marginTop="246dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="245dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/vincularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/vincular"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vincular_info"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/vincular_info"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_above="@+id/vincularButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/VinculaCuentaText"
        android:text="@string/vincular_info"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp" />

    <TextView
        android:id="@+id/VinculaCuentaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vincula_cuenta_pregunta"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="visible"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/vincular_info"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/image_content_ajef"
        app:srcCompat="@drawable/icon"
        android:layout_marginStart="23dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/nombreView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="23dp" />

    <Button
        android:id="@+id/organizadorButton"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/organizadores"
        app:layout_constraintBottom_toTopOf="@+id/menuButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="186dp"
        android:layout_height="59dp"
        android:text="@string/men_principal"
        android:textSize="20sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/nombreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/cerrar_sesi_n"
        android:textSize="12sp"
        android:layout_marginEnd="17dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="17dp" />

</android.support.constraint.ConstraintLayout>
