<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meb1.manuel.congresoajef.MenuSecundario">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        tools:contentDescription="Logo AJEF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/icon"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="120dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="" />

    <Button
        android:id="@+id/itinerarioButton"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:text="@string/itinerario"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/turismoButton"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/turismoButton"
        android:layout_marginLeft="44dp" />

    <Button
        android:id="@+id/turismoButton"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:text="@string/turismo"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="147dp"
        app:layout_constraintLeft_toRightOf="@+id/itinerarioButton"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="54dp" />

    <Button
        android:id="@+id/contactoButton"
        android:layout_width="201dp"
        android:layout_height="53dp"
        android:layout_marginTop="30dp"
        android:text="@string/contacto_emergencia"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itinerarioButton"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />
</android.support.constraint.ConstraintLayout>
